kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
spec:
  hostnames: ["rook.${SHORT_ROOT_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      port: 443
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
